[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/walker_boss/walker_boss.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "poof"
length = 0.6
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]

length = 0.75
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67, 68 ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 18.0

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 19.2, 11.2 )

[node name="walker" type="RigidBody2D"]

input_pickable = false
collision_layer = 64
collision_mask = 97
mode = 2
mass = 20.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 4
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
green_gem_name = ""
door_name = ""
dest_scene = ""
dest_spawn = ""

[node name="anim" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/poof = SubResource( 1 )
anims/rolling = SubResource( 2 )
blend_times = [  ]

[node name="sprite" type="Sprite" parent="." index="1"]

position = Vector2( 0, -8 )
scale = Vector2( 15, 15 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 68
_sections_unfolded = [ "Animation", "Transform" ]

[node name="shape" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0, 8 )
scale = Vector2( 5, 5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="shape2" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0, -40 )
scale = Vector2( 5, 5 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="raycast_left" type="RayCast2D" parent="." index="4"]

position = Vector2( -24, 32 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 70 )
collision_mask = 3
_sections_unfolded = [ "Transform" ]

[node name="raycast_right" type="RayCast2D" parent="." index="5"]

position = Vector2( 24, 32 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 70 )
collision_mask = 3
_sections_unfolded = [ "Transform" ]

[node name="flash_timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.03
one_shot = false
autostart = false

[node name="invincibility" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]

[connection signal="timeout" from="invincibility" to="." method="_on_invincibility_timeout"]


